--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./config:/etc/odoo
       - ./addons:/mnt/extra-addons
     environment:
-      - HOST=mydb
+      - HOST=db
       - USER=odoo
       - PASSWORD=myodoo
   db:
