--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       - HOST=db
       - USER=odoo
-      - PASSWORD=myodoo
+      - PASSWORD=odoo
   db:
     image: postgres:15
     container_name: postgresql
